--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,174 +27,100 @@ body{
     text-align: left;
     background-color: #fff;
     background: #F5F5F5;
+    padding: 90px 20px 0;
 
 }
+
+
+/******************menu superior*************/
+ header {
+width: 100%;
+position: fixed;
+top: 0;
+left: 0;
+background-color: #000;
+ }
+
+
+.header_superior {
+max-width: 1200px;
+margin: auto;
+display: flex;
+align-items: center;
+justify-content: space-between;
+color: white;
+padding: 20px;
+}
+
+.logo {
+    width: 250px;
+}
+
+.search input{
+width: 300px;
+padding: 10px;
+}
+
+/**************BARRA MENU*************/
+
+.container__menu {
+    width: 100%;
+    height: 70px;
+    background: rgb(11, 11, 29);
+    padding: 0px 20px;
+}
+
 
 .menu{
-    background-color: #1A202C;
-    color: #fff;
-    height: 150px;
-}
 
-.menu__container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
     max-width: 1200px;
+    margin: auto;
     height: 100%;
-    margin: 0 auto;
+
 }
 
-.menu__links{
+nav{
     height: 100%;
-    transition: transform .5s;
+
+}
+nav ul{
+    height: 100%;
     display: flex;
+
+
 }
 
-.menu__item{
+nav ul li {
+    height: 100%;
     list-style: none;
     position: relative;
-    height: 100%;
-    --clip: polygon(0 0, 100% 0, 100% 0, 0 0);
-    --transform: rotate(-90deg);
+
 }
 
-.menu__item:hover{
-    --clip: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    --transform: rotate(0);
+nav ul li a {
+width: 100%;
+height: 100%;
+display: flex;
+align-items: center;
+padding: 14px;
+color: white;
+text-transform: uppercase;
+font-size: 14px;
+transition: all 300ms ease;
+
+}
+nav ul li a:hover {
+transform: scale(1.1);
+background: rgb(41, 41, 41);
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,.05);
 }
 
-.menu__link{
-    color: #fff;
-    text-decoration: none;
-    padding: 0 30px;
-    display: flex;
-    height: 100%;
-    align-items: center;
-}
 
-.menu__link:hover{
-    background-color: #5e7094;
-}
 
 /*
-.menu__arrow{
-    transform: var(--transform);
-    transition: transform .3s;
-    display: block;
-    margin-left: 3px;
-}
-
-.menu__nesting{
-    list-style: none;
-    transition:clip-path .3s;
-    clip-path: var(--clip);
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: max-content;
-    transform: translateY(100%);
-    background-color: #000;
-}
-
-.menu__link--inside{
-    padding: 30px 100px 30px 20px;
-}
-
-.menu__link--inside:hover{
-    background-color: #798499;
-}
-*/
-
-.menu__hamburguer{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-    cursor: pointer;
-    display: none;
-}
-
-.menu__img{
-    display: block;
-    width: 36px;
-}
-
-
-@media (max-width:800px){
-    .menu__hamburguer{
-        display: flex;
-    }
-
-    .menu__item{
-        --clip:0;
-        overflow:hidden ;
-    }
-
-    .menu__item--active{
-        --transform: rotate(0);
-        --background: #5e7094;
-    }
-
-    .menu__item--show{
-        background-color: var(--background);
-    }
-
-
-    .menu__links{
-        position: fixed;
-        max-width: 300px;
-        width: 50%;
-        top: 20px;
-        bottom: 0;
-        right: 0;
-        background-color: #5e7094;
-        overflow-y: auto;
-        display: grid;
-        grid-auto-rows: max-content;
-        transform: translateX(100%);
-    }
-
-    .menu__links--show{
-        transform: unset;
-        width: 100%;
-    }
-
-    .menu__link{
-        padding: 25px 0;
-        padding-left: 30px;
-        height: auto;
-    }
-
-    .menu__arrow{
-        margin-left: auto;
-        margin-right: 20px;
-    }
-
-    .menu__nesting{
-        display: grid;
-        position: unset;
-        width: 100%;
-        transform: translateY(0);
-        height: 0;
-        transition: height .3s;
-    }
-
-    .menu__link--inside{
-        width: 90%;
-        margin-left: auto;
-        border-left: 1px solid #798499;
-    }
-}
-
-
-
 *,::after,::before {
     box-sizing: border-box
 }
-
-
 
 @-ms-viewport {
     width: device-width
