--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -ms-overflow-style: scrollbar;
-    -webkit-tap-highlight-color: transparent
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -78,7 +78,6 @@ header {
 
 nav {
     height: 100%;
-   
 }
 
 nav > ul {
@@ -132,9 +131,10 @@ nav ul li a:hover {
 
 #selected{
     transform: scale(1.1);
-    background-color: rgb(66, 65, 65);
+    background-color: rgb(25, 2, 88);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
+
 /**ELEMENTOS RESPONSIVOS**/
 
 .icon__menu {
@@ -143,7 +143,7 @@ nav ul li a:hover {
     cursor: pointer;
     width: 26px;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
 }
 
@@ -157,12 +157,8 @@ nav ul li a:hover {
 
 
 #check__menu {
-    *display: none;
+    display: none;
 }
-
-
-
-
 
 
 @media screen and (max-width: 720px) {
@@ -179,14 +175,14 @@ nav ul li a:hover {
         width: 200px;
     }
 
-    nav ul {
+    nav > ul {
         flex-direction: column;
-        background-color: #002752;
+        background-color: rgb(22, 22, 58);
         position: fixed;
         left: 0;
         top: 158px;
         width: 100%;
-        height: 300px;
+        height: 0px;
         transition: all 300ms ease;
         z-index: 100;
         opacity: 0;
@@ -194,17 +190,19 @@ nav ul li a:hover {
 
     }
 
-    nav ul li a :hover {
+    nav > ul > li > a :hover {
         transform: scale(1);
     }
 
-    nav ul li:first-child a {
+    nav > ul > li:first-child a{
         background-position: 20px;
+    
     }
 
     #selected {
         transform: scale(1);
     }
+
 
     #label__check {
         display: block;
@@ -215,10 +213,12 @@ nav ul li a:hover {
         display: flex;
     }
 
-    #check__menu:checked~nav>ul {
+    #check__menu:checked ~ nav > ul {
         height: 300px;
         visibility: visible;
+        opacity: 1;
     }
+    
 
 }
 
