--- a/css/index.css
+++ b/css/index.css
@@ -122,8 +122,10 @@ nav {
 /* Encabezado */
 #encabezado {
   height: 100vh;
+  padding: 40px 20px;
   background: #131414 url(../media/bg2.jpg) center center no-repeat;
   background-size: cover;
+  margin-top: 80px;
 }
 
 #encabezado .container-seb,
