--- a/css/estilos.css
+++ b/css/estilos.css
@@ -222,286 +222,6 @@ nav ul li a:hover {
 
 }
 
-/*
-*,::after,::before {
-    box-sizing: border-box
-}
-
-@-ms-viewport {
-    width: device-width
-}
-
-article,aside,dialog,figcaption,figure,footer,header,hgroup,main,nav,section {
-    display: block
-}
-
-
-[tabindex="-1"]:focus {
-    outline: 0!important
-}
-
-hr {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible
-}
-
-h1,h2,h3,h4,h5,h6 {
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-p {
-    margin-top: 0;
-    margin-bottom: 1rem
-}
-
-/*
-abbr[data-original-title], abbr[title] {
-    text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted;
-    cursor: help;
-    border-bottom: 0
-}
-
-address {
-    margin-bottom: 1rem;
-    font-style: normal;
-    line-height: inherit
-}
-
-dl,ol,ul {
-    margin-top: 0;
-    margin-bottom: 1rem
-}
-
-ol ol,ol ul,ul ol,ul ul {
-    margin-bottom: 0
-}
-
-dt {
-    font-weight: 700
-}
-
-dd {
-    margin-bottom: .5rem;
-    margin-left: 0
-}
-
-blockquote {
-    margin: 0 0 1rem
-}
-
-dfn {
-    font-style: italic
-}
-
-b,strong {
-    font-weight: bolder
-}
-
-small {
-    font-size: 80%
-}
-
-sub,sup {
-    position: relative;
-    font-size: 75%;
-    line-height: 0;
-    vertical-align: baseline
-}
-
-sub {
-    bottom: -.25em
-}
-
-sup {
-    top: -.5em
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-   -webkit-text-decoration-skip: objects
-}
-
-a:hover {
-    color: #0056b3;
-    text-decoration: underline
-}
-
-a:not([href]):not([tabindex]) {
-    color: inherit;
-    text-decoration: none
-}
-
-a:not([href]):not([tabindex]):focus,a:not([href]):not([tabindex]):hover {
-    color: inherit;
-    text-decoration: none
-}
-
-a:not([href]):not([tabindex]):focus {
-    outline: 0
-}
-
-code,kbd,pre,samp {
-    font-family: monospace,monospace;
-    font-size: 1em
-}
-
-pre {
-    margin-top: 0;
-    margin-bottom: 1rem;
-    overflow: auto;
-    -ms-overflow-style: scrollbar
-
-}
-
-figure {
-    margin: 0 0 1rem
-}
-
-img {
-    vertical-align: middle;
-    border-style: none
-}
-
-svg:not(:root) {
-    overflow: hidden
-}
-
-table {
-    border-collapse: collapse
-}
-
-caption {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    color: #6c757d;
-    text-align: left;
-    caption-side: bottom
-}
-
-th {
-    text-align: inherit
-}
-
-label {
-    display: inline-block;
-    margin-bottom: .5rem
-}
-
-button {
-    border-radius: 0
-}
-
-button:focus {
-    outline: 1px dotted;
-    outline: 5px auto -webkit-focus-ring-color
-}
-
-button,input,optgroup,select,textarea {
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit
-}
-
-button,input {
-    overflow: visible
-}
-
-button,select {
-    text-transform: none
-}
-
-[type=reset],[type=submit],button,html [type=button] {
-    -webkit-appearance: button
-}
-
-[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
-    padding: 0;
-    border-style: none
-}
-
-input[type=checkbox],input[type=radio] {
-    box-sizing: border-box;
-    padding: 0
-}
-
-input[type=date],input[type=datetime-local],input[type=month],input[type=time] {
-    -webkit-appearance: listbox
-}
-
-/*************************
-textarea {
-    overflow: auto;
-    resize: vertical
-}
-
-fieldset {
-    min-width: 0;
-    padding: 0;
-    margin: 0;
-    border: 0
-}
-
-legend {
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    padding: 0;
-    margin-bottom: .5rem;
-    font-size: 1.5rem;
-    line-height: inherit;
-    color: inherit;
-    white-space: normal
-}
-
-progress {
-    vertical-align: baseline
-}
-
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
-    height: auto
-}
-
-[type=search] {
-    outline-offset: -2px;
-    -webkit-appearance: none
-}
-
-[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration {
-    -webkit-appearance: none
-}
-
-::-webkit-file-upload-button {
-    font: inherit;
-    -webkit-appearance: button
-}
-
-output {
-    display: inline-block
-}
-
-summary {
-    display: list-item;
-    cursor: pointer
-}
-
-template {
-    display: none
-}
-
-[hidden] {
-    display: none!important
-}
-*****************************/
-
-
-
 .h1,
 .h2,
 .h3,
@@ -715,7 +435,7 @@ pre code {
     overflow-y: scroll
 }
 
-************************/ .container {
+.container {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
@@ -4111,245 +3831,6 @@ tbody.collapse.show {
     border-bottom-left-radius: 0
 }
 
-/*
-.custom-control {
-    position: relative;
-    display: block;
-    min-height: 1.5rem;
-    padding-left: 1.5rem
-}
-
-.custom-control-inline {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin-right: 1rem
-}
-
-.custom-control-input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0
-}
-
-.custom-control-input:checked~.custom-control-label::before {
-    color: #fff;
-    background-color: #007bff
-}
-
-.custom-control-input:focus~.custom-control-label::before {
-    box-shadow: 0 0 0 1px #fff,0 0 0 .2rem rgba(0,123,255,.25)
-}
-
-.custom-control-input:active~.custom-control-label::before {
-    color: #fff;
-    background-color: #b3d7ff
-}
-
-.custom-control-input:disabled~.custom-control-label {
-    color: #6c757d
-}
-
-.custom-control-input:disabled~.custom-control-label::before {
-    background-color: #e9ecef
-}
-
-.custom-control-label {
-    margin-bottom: 0
-}
-
-.custom-control-label::before {
-    position: absolute;
-    top: .25rem;
-    left: 0;
-    display: block;
-    width: 1rem;
-    height: 1rem;
-    pointer-events: none;
-    content: "";
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: #dee2e6
-}
-
-.custom-control-label::after {
-    position: absolute;
-    top: .25rem;
-    left: 0;
-    display: block;
-    width: 1rem;
-    height: 1rem;
-    content: "";
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%
-}
-
-.custom-checkbox .custom-control-label::before {
-    border-radius: .25rem
-}
-
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-    background-color: #007bff
-}
-
-.custom-checkbox .custom-control-input:checked~.custom-control-label::after {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E")
-}
-
-.custom-checkbox .custom-control-input:indeterminate~.custom-control-label::before {
-    background-color: #007bff
-}
-
-.custom-checkbox .custom-control-input:indeterminate~.custom-control-label::after {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E")
-}
-
-.custom-checkbox .custom-control-input:disabled:checked~.custom-control-label::before {
-    background-color: rgba(0,123,255,.5)
-}
-
-.custom-checkbox .custom-control-input:disabled:indeterminate~.custom-control-label::before {
-    background-color: rgba(0,123,255,.5)
-}
-
-.custom-radio .custom-control-label::before {
-    border-radius: 50%
-}
-
-.custom-radio .custom-control-input:checked~.custom-control-label::before {
-    background-color: #007bff
-}
-
-.custom-radio .custom-control-input:checked~.custom-control-label::after {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E")
-}
-
-.custom-radio .custom-control-input:disabled:checked~.custom-control-label::before {
-    background-color: rgba(0,123,255,.5)
-}
-
-.custom-select {
-    display: inline-block;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    padding: .375rem 1.75rem .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    vertical-align: middle;
-    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
-    background-size: 8px 10px;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none
-}
-
-.custom-select:focus {
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.075),0 0 5px rgba(128,189,255,.5)
-}
-
-.custom-select:focus::-ms-value {
-    color: #495057;
-    background-color: #fff
-}
-
-.custom-select[multiple],.custom-select[size]:not([size="1"]) {
-    height: auto;
-    padding-right: .75rem;
-    background-image: none
-}
-
-.custom-select:disabled {
-    color: #6c757d;
-    background-color: #e9ecef
-}
-
-.custom-select::-ms-expand {
-    opacity: 0
-}
-
-.custom-select-sm {
-    height: calc(1.8125rem + 2px);
-    padding-top: .375rem;
-    padding-bottom: .375rem;
-    font-size: 75%
-}
-
-.custom-select-lg {
-    height: calc(2.875rem + 2px);
-    padding-top: .375rem;
-    padding-bottom: .375rem;
-    font-size: 125%
-}
-
-.custom-file {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    margin-bottom: 0
-}
-
-.custom-file-input {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    margin: 0;
-    opacity: 0
-}
-
-.custom-file-input:focus~.custom-file-control {
-    border-color: #80bdff;
-    box-shadow: 0 0 0 .2rem rgba(0,123,255,.25)
-}
-
-.custom-file-input:focus~.custom-file-control::before {
-    border-color: #80bdff
-}
-
-.custom-file-input:lang(en)~.custom-file-label::after {
-    content: "Browse"
-}
-
-.custom-file-label {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1;
-    height: calc(2.25rem + 2px);
-    padding: .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-    border-radius: .25rem
-}
-
-.custom-file-label::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 3;
-    display: block;
-    height: calc(calc(2.25rem + 2px) - 1px * 2);
-    padding: .375rem .75rem;
-    line-height: 1.5;
-    color: #495057;
-    content: "Browse";
-    background-color: #e9ecef;
-    border-left: 1px solid #ced4da;
-    border-radius: 0 .25rem .25rem 0
-}
-*/
 
 .nav {
     display: -webkit-box;
