--- a/css/index.css
+++ b/css/index.css
@@ -716,7 +716,7 @@ h3 {
   }
 }
 
-/********** CARRUSEL DE IMAGENES CURSOS********************************************************/
+/********** CURSOS ***********************************************/
 
 .title2 {
   text-align: center;
@@ -727,49 +727,6 @@ h3 {
   color: black;
 }
 
-.contenedor__slider {
-  max-width: 1000px;
-  height: 500px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 10px;
-}
-
-input[type=radio] {
-  display: center;
-}
-
-.contenedor {
-  width: 100%;
-  max-width: 800px;
-  height: 100%;
-  max-height: 600px;
-  transform-style: preserve-3d;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.cards {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-}
-
-.card2 {
-position: absolute;
-width: 60%;
-height: 100%;
-left: 0;
-right: 0;
-margin: auto;
-cursor: pointer;
-transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
 
 
 .img {
@@ -778,27 +735,4 @@ transition: transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
   border-radius: 10px;
   -o-object-fit: cover;
   object-fit: cover;
-}
-
-#item-2:checked~.cards #selector-1,
-#item-1:checked~.cards #selector-3,
-#item-3:checked~.cards #selector-2 {
-  transform: translate(-40%) scale(0.8);
-  opacity: 0.6;
-  z-index: 0;
-}
-
-#item-3:checked~.cards #selector-1,
-#item-1:checked~.cards #selector-2,
-#item-2:checked~.cards #selector-3 {
-  transform: translate(40%) scale(0.8);
-  opacity: 0.6;
-  z-index: 0;
-}
-
-#item-1:checked~.cards #selector-1,
-#item-2:checked~.cards #selector-2,
-#item-3:checked~.cards #selector-3 {
-  transform: translate(0) scale(1);
-  z-index: 1;
 }
